# DisplayJiraTickets

./: .gitignore  AGENTS.md  README.md  analyser_jira.py  config.ini.example  pyproject.toml
.github/workflows/: ci.yml  python-app.yml  release.yml
display_jira_tickets/: config.py  jira_client.py  reporter.py
src/: analyser_jira.py  config.py  config_file_initializer.py  display.py  issue.py  jira_client.py  reporter.py
src/display_jira_tickets/: __main__.py  config.py  config_file_initializer.py  issue.py  jira_client.py  reporter.py
tests/: test_config.py  test_config_file_initializer.py  test_issue.py  test_jira_client.py  test_reporter.py
