[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DisplayJiraTickets"
version = "0.1.0"
authors = [
    { name="Sorondare" },
]
description = "Display the daily jira tickets on a copy/paste pretty format."
readme = "README.md"
requires-python = ">=3.11"
license = { file="LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved ::  GPL-3.0 license",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

dependencies = [
    "jira",
]

# --- Project URLs (Optional but good practice) ---
[project.urls]
Repository = "https://github.com/Sorondare/DisplayJiraTickets"

[project.scripts]
display-daily-tickets = "display_jira_tickets.__main__:main"
