[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DisplayJiraTickets"
version = "1.0.0"
authors = [
    { name="Sorondare" },
]
description = "Display the daily jira tickets on a copy/paste pretty format."
readme = "README.md"
requires-python = ">=3.12"
license = { file="LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

dependencies = [
    "jira",
]

# --- Project URLs (Optional but good practice) ---
[project.urls]
Repository = "https://github.com/Sorondare/DisplayJiraTickets"

[project.scripts]
display-daily-tickets = "display:main"

[tool.hatch.build.targets.wheel]
packages = ["src/display.py", "src/config.py", "src/config_file_initializer.py", "src/issue.py", "src/jira_client.py", "src/reporter.py"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 150
